--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <h1>Spotify Username?</h1>
-    <form method="POST">
-        <input type='text' name="usr"/>
-        <button type="button">Click Me!</button>
-    </form>
+    <head>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
+    <h1>SPOTIFY DROP</h1>
+    </head>
+    
+    <body>
+        <div class=center>
+            <form method="POST">
+            <div class = "text">
+            <p> Do you spend hours making a playlist, just to have your listeners dissapointed? Suffer no longer. </p>
+            <p> We at Spotify DROP receive a playlist, keep only the best for your party or dinner, and customize the bass, flows, and jams to please your auditory nerves </p>
+            </div>
+            <p>
+            <div class = "buttonHolder">
+            <label>Username: </label>
+            <input class="authentication" type="text"></p>
+            <p>
+            <label>Password:  </label>
+            <input class="authentication" type="password"></p>
+    
+               <button type="button" onclick = "myFunction()"> Login</button>
+            </div>
+        </form>
+        </div>
+    </body>
+
+    <script type="text/javascript">
+        function myFunction() {
+            
+        }
+    </script>
 </html>
